--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Sailboat Race",
+    "name": "sailboat-race",
     "private": true,
     "version": "0.0.1",
     "description": "a Sails application",
